[indra] : update .env.example

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,9 @@ DB_PORT=
 DB_DATABASE=kampung_budaya_2023
 DB_USERNAME=
 DB_PASSWORD=
+
+SECRET_KEY=
+
+FIREBASE_BUCKET=
+FIREBASE_IMAGE_URL=
+FIREBASE_CREDENTIAL_PATH=
